@@ -1,3 +1,6 @@
+[B]Version 1.0.5 - 2011-12-09[/B]
+- Dropped use of script.module.danishaddons
+
 [B]Version 1.0.4[/B]
 - Use danishaddons module version 1.1.0
 
